# conway-s-game-of-life

./: CMakeLists.txt  README.md
src/: board.hpp  cell.hpp  game.hpp  main.cpp  parser.cpp  parser.hpp
